<resources>
    <string name="app_name">DayLight Mobile</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_promotion">Promotion</string>
    <string name="menu_fav">Favourite Products</string>
    <string name="menu_fb">Facebook Page</string>
    <string name="menu_feedback">Send Feedback</string>
    <string name="menu_share">Share</string>
    <string name="menu_about">About</string>

    <string name="fb_page_id">1832184800399073</string>
    <string name="app_link">www.google.com</string>
    <string name="feedback_mail">application.daylightpku@gmail.com</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
